--- a/Unicadets/package.json
+++ b/Unicadets/package.json
@@ -9,24 +9,24 @@
     "test": "hardhat coverage",
     "deploy:local": "hardhat run --network localhost scripts/deployContract.js",
     "local-testnet": "hardhat node"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hardhat": "^2.9.2",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.2",
+    "hardhat": "^2.9.2",
     "solidity-coverage": "^0.7.20"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.6",
+    "erc721a": "^3.1.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.2",
     "solidity-coverage": "^0.7.20"
