--- a/Unicadets/package.json
+++ b/Unicadets/package.json
@@ -17,10 +17,9 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.2",
     "hardhat": "^2.9.2",
+    "mocha": "^9.2.2",
     "solidity-coverage": "^0.7.20"
   },
   "devDependencies": {
