Added unit testing for minting/deploying/setting renderer/storing tokenIDs/assigning ownership etc

--- a/Unicadets/.gitignore
+++ b/Unicadets/.gitignore
@@ -3,7 +3,9 @@ myproject
 
 /node_modules
 /.idea
-/svgs
+/svgs/*.svg
+/encoded_svgs/*.txt
+/decoded_svgs/*.svg
 *.tsbuildinfo
 
 # VS Code workspace config
