--- a/Unicadets/package.json
+++ b/Unicadets/package.json
@@ -18,8 +18,10 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
     "ethers": "^5.6.2",
+    "fetch": "^1.1.0",
     "hardhat": "^2.9.2",
     "mocha": "^9.2.2",
+    "node-fetch": "^3.2.3",
     "solidity-coverage": "^0.7.20"
   },
   "devDependencies": {
