--- a/Unicadets/package.json
+++ b/Unicadets/package.json
@@ -23,6 +23,7 @@
     "ethers": "^5.6.2",
     "fetch": "^1.1.0",
     "hardhat": "^2.9.2",
+    "hardhat-contract-sizer": "^2.5.1",
     "hardhat-etherscan": "^1.0.1",
     "hardhat-gas-reporter": "^1.0.8",
     "mocha": "^9.2.2",
